--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@prisma/client": "^5.11.0",
     "axios": "^1.6.8",
+    "bcryptjs": "^2.4.3",
     "next": "14.1.3",
     "prisma": "^5.11.0",
     "react": "^18",
@@ -19,6 +20,8 @@
     "react-spinners": "^0.13.8"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
