--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "next": "14.1.3",
+    "next-auth": "^4.24.7",
     "prisma": "^5.11.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-spinners": "^0.13.8"
